Finnished developing all webpages and making most of them responsive

--- a/src/Assets/css/AboutPage.css
+++ b/src/Assets/css/AboutPage.css
@@ -37,3 +37,42 @@ img {
     color: #b7b7b7e2;
     transition: 0.5s;
 }
+
+
+
+@media screen and (max-width: 1150px) {
+
+    /* Styling each individual link */
+    nav div a {
+        margin: 0 10px;
+    }
+}
+
+
+@media screen and (max-width: 850px) {
+
+    /* Styling each individual link */
+    nav div a {
+        font-size: 20px;
+    }
+}
+
+
+@media screen and (max-width: 730px) {
+    
+    /* My Name */
+    h1 {
+        font-size: 40px;
+    }
+}
+
+
+@media screen and (max-width: 700px) {
+    
+    /* Navigation Container */
+    nav {
+        height: 100px;
+        flex-direction: column;
+        padding: 0;
+    }
+}
