--- a/src/Assets/css/PortfolioPage.css
+++ b/src/Assets/css/PortfolioPage.css
@@ -1,3 +1,9 @@
+:root {
+    --image-height: 80%;
+    --number-of-rows: 10;
+}
+
+
 .Projects-Main-Container, .Projects-Container {
     display: flex;
     flex-direction: column;
@@ -6,10 +12,11 @@
 .Projects-Main-Container {
     align-items: center;
     row-gap: 30px;
+    width: 100%;
 }
 
 .heading {
-    width: 80%;
+    width: 85%;
 }
 
 .heading h1 {
@@ -17,16 +24,36 @@
 }
 
 .Projects-Container {
-    row-gap: 150px;
-}
-
-.Projects-Container div {
-    display: flex;
+    display: grid;
+    grid-template: repeat(var(--number-of-rows), 400px) / repeat(2, 40%);
+    column-gap: 50px;
     justify-content: center;
-    column-gap: 200px;
+    width: 100%;
 }
 
-.Projects-Container div img {
-    width: 400px;
-    height: 300px;
+.Projects-Container img {
+    width: 100%;
+    height: var(--image-height);
+}
+
+
+@media screen and (max-width: 1100px) {
+    .Projects-Container img {
+        height: calc(var(--image-height) - 10%);
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .Projects-Container {
+        grid-template: repeat(11, 200px) / repeat(2, 40%);
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .Projects-Container {
+        grid-template: repeat(calc(var(--number-of-rows) + 10), 200px) / repeat(1, 80%);
+    }
+    .Projects-Container img {
+        height: calc(var(--image-height) + 10%);
+    }
 }
